Fixing padding on lists.
It was too much on the smaller screens.

--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ a:hover, a:focus {
 }
 ul {
 	margin: 0 0 1em;
-	padding: 0 0 0 2em;
+	padding: 0 0 0 1.5em;
 }
 ul li {
 	margin: 0;
@@ -123,7 +123,7 @@ ul li {
 }
 ol {
 	margin: 0 0 1em;
-	padding: 0 0 0 2em;
+	padding: 0 0 0 1.5em;
 }
 ol li {
 	margin: 0;
